server changes and scrolling issue so latest messages appear at bottom and visible

--- a/react-ui/src/components/UserWindow/UserWindow.scss
+++ b/react-ui/src/components/UserWindow/UserWindow.scss
@@ -30,13 +30,16 @@
 }
 
 .WindowContentWrapper {
+  height: 300px;
   margin: 20px 0;
   overflow-y: scroll;
 }
 
+
 .WindowContent {
   @include default-wrapper-width();
-  height: 300px;
+  display: flex;
+  flex-direction: column;
 }
 
 .WindowYou, .WindowThem {
